solve 3BabyFigsTale using Consumer