@@ -3,6 +3,7 @@ package com.company;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collector;
@@ -27,7 +28,7 @@ enum Color {
 
 public class CollectorsPractice {
     public static void main(String[] args) {
-        List<Car> cars = List.of(new Car("K5", Brand.HYUNDAI,Color.Green), new Car("A8", Brand.AUDI,Color.Black));
+        List<Car> cars = Arrays.asList(new Car("K5", Brand.HYUNDAI, Color.Green), new Car("A8", Brand.AUDI, Color.Black));
         Map<String, Map<Color, List<Car>>> carByBrandAndColor = cars.stream()
                                                                     .collect(groupingBy(Car::getName,
                                                                                         groupingBy(Car::getColor)));
